--- a/style.css
+++ b/style.css
@@ -11,6 +11,18 @@ button {
   font: inherit;
   outline: none; /*make sure there is visual indication for coucs state*/
 }
+
+/*keyFrame*/
+@keyframes fade-in-from-top {
+  0% {
+    opacity: 0;
+    transform: translateY(-50px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
 /*Base style*/
 
 .app {
@@ -19,6 +31,11 @@ button {
   color: #fff;
   height: 100vh;
   width: 100vw;
+}
+
+.app__container {
+  height: 100vh;
+  display: flex;
 }
 
 /* Styles */
@@ -32,6 +49,7 @@ button {
   align-self: center;
   margin-left: 20px;
   margin-right: 30px;
+  animation: fade-in-from-top 0.5s;
 }
 
 .dd-toggle {
@@ -39,6 +57,7 @@ button {
   padding: 0 13px;
   cursor: pointer;
   transition: all 0.4s;
+  animation: fade-in-from-top 0.5s;
 }
 .dd-toggle:hover {
   color: #fff;
@@ -71,4 +90,24 @@ button {
 }
 
 .dd-toggle__text {
+}
+
+/*-------------------------------*/
+
+.sidebar {
+  background-color: #10171a;
+  width: 75px;
+}
+
+/*-------------------------------*/
+.panel {
+  background-color: #2b363c;
+  width: 350px;
+}
+
+/*----------------------------- --*/
+
+.main {
+  background-color: #edf1f3;
+  flex: 1;
 }
